# utils

./: README.md
c_common/: app_type.h
clone-tf/: Pipfile  README.md  clone-tf.py  startup.sh
cmake-c-project-template/: CMakeLists.txt  toolchain-arm.cmake
dist-package-examples/: PKGBUILD
docker-dev-env-template/: Dockerfile  Makefile  README.md  docker-compose.yml
embedded-linux-scripts/: daemon_guarder  shellutils.sh
font-subset/: .gitignore  8k.txt  Pipfile  README.md  build.sh  gb2312.c  hf.txt
git-submodule-mirror-tool/: README.md  git-mirror.py
linux-module-example/: Makefile  example-module.c  some-other-file.c
makefile-common/: Makefile  common.mk  crossbuild-example.sh  test.c
math-script/: gen-sin-on-sound-card.py
math-script/display-csv/: display-csv.py  i2s.csv
media-script/: play_rtsp.py
media-script/wave-stuff/: Pipfile  wave-stuff.py
python-utils/: atom_file.py  myshellutils.py  serialport.py  set_eth_mac_by_chip_uuid.py  yaml-merge.py  yaml_conf.py
render-template/: comm_handler_table.c.jinja2  gen_comm_handler.py  render_template.py
scons-template/: SConstruct
scons-template/scripts/: utils.scons  yocto_crossbuild.scons
uart-echo-test/: uart-echo-test.py
vagrant-template/: README.md  Vagrantfile  do_sync.sh
